--- a/workshop3.html
+++ b/workshop3.html
@@ -12,7 +12,7 @@
 </head>
 <body>
         <h3>แทรกรูปภาพ</h3>
-        <a herf="https://www.whitehouse.gov"><img src="image/download.jpg"></a>a>
+        <a herf="https://www.whitehouse.gov"><img src="image/download(1).jpg"></a>a>
 
 </body>
 </html>
