--- a/workshop3.html
+++ b/workshop3.html
@@ -12,7 +12,7 @@
 </head>
 <body>
         <h3>แทรกลิงค์รูปภาพ</h3>
-        <a herf="https://www.whitehouse.gov"><img src="image/night.jpg"></a>a>
+        <a href="https://www.whitehouse.gov"><img src="image/night.jpg"></a>a>
 
 </body>
 </html>
