--- a/workshop1.html
+++ b/workshop1.html
@@ -12,7 +12,7 @@
 </head>
 <body>
         <h3>แทรกข้อความ</h3>
-        <image src="image/download.jpg">ไปเที่ยวธรรมเนียบขาว</a> <br>
+        <image src="image/download.jpg"></a> <br>
         
             
 </body>
